--- a/CafeMenu/styles.css
+++ b/CafeMenu/styles.css
@@ -1,6 +1,17 @@
 
 
 
-h1 {
+h1, h2, p {
     text-align: center;
+}
+
+body {
+    background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
+}
+
+.menu {
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+    background-color: burlywood;
 }
