edit to cafe menu

--- a/CafeMenu/styles.css
+++ b/CafeMenu/styles.css
@@ -1,22 +1,37 @@
 
 
 
-h1, h2, p {
+h1, h2, p {    
     text-align: center;
 }
 
+h1, h2 {
+    font-family: Impact, serif;
+}
+
+h1 {
+    font-size: 40px;
+}
+
+h2 {
+    font-size: 30px;
+}
+
 body {
+    font-family: sans-serif;
     background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
 }
 
 .menu {
+    max-width: 500px;
     margin-left: auto;
     margin-right: auto;
     width: 80%;
     background-color: burlywood;
+    padding: 20px;
 }
 
-.flavor {
+.flavor, .dessert {
     text-align: left;
     width: 75%;
 }
@@ -28,4 +43,8 @@ body {
 
 .item p {
     display: inline-block;
+}
+
+.established {
+    font-style: italic;
 }
