--- a/SetOfColoredMarkers/styles.css
+++ b/SetOfColoredMarkers/styles.css
@@ -5,6 +5,11 @@ h1 {
     text-align: center;
 }
 
+.container {
+    padding: 10px 0;
+    background-color: rgb(255, 255, 255);
+}
+
 .marker {    
     height: 25px;
     width: 200px;
@@ -12,13 +17,13 @@ h1 {
 }
 
 .one {
-    background-color: red;
+    background-color: rgb(255, 127, 0);
 }
 
 .two {
-    background-color: green;
+    background-color: rgb(0, 255, 255);
 }
 
 .three {
-    background-color: blue;
+    background-color: rgb(255, 0, 255);
 }
