--- a/SetOfColoredMarkers/styles.css
+++ b/SetOfColoredMarkers/styles.css
@@ -3,6 +3,7 @@
 
 h1 {
     text-align: center;
+    background-color: rgb(0, 255, 255);
 }
 
 .container {
@@ -16,14 +17,14 @@ h1 {
     margin: 10px auto;
 }
 
-.one {
-    background-color: rgb(255, 127, 0);
+.red {
+    background-color: rgb(255, 0, 0);
 }
 
-.two {
-    background-color: rgb(0, 255, 255);
+.green {
+    background-color: #00FF00;
 }
 
-.three {
-    background-color: rgb(255, 0, 255);
+.blue {
+    background-color: rgb(0, 0, 0);
 }
