--- a/SetOfColoredMarkers/styles.css
+++ b/SetOfColoredMarkers/styles.css
@@ -18,13 +18,28 @@ h1 {
 }
 
 .red {
-    background-color: rgb(255, 0, 0);
+    background: linear-gradient(180deg, rgb(122, 74, 14), rgb(245, 62, 113), rgb(162, 27, 27));
 }
 
 .green {
-    background-color: #00FF00;
+    background: linear-gradient(#55680D, #71F53E, #116C31);
 }
 
 .blue {
-    background-color: rgb(0, 0, 0);
+    background: linear-gradient(hsl(186, 76%, 16%), hsl(223, 90%, 60%), hsl(240, 56%, 42%));
+}
+
+.sleeve {
+    width: 110px;
+    height: 25px;
+    background-color: rgba(255, 255, 255, 0.5);    
+}
+
+.cap {
+    width: 60px;
+    height: 25px;
+}
+
+.cap, .sleeve {
+    display: inline-block;
 }
