--- a/SetOfColoredMarkers/styles.css
+++ b/SetOfColoredMarkers/styles.css
@@ -2,8 +2,7 @@
 
 
 h1 {
-    text-align: center;
-    background-color: rgb(0, 255, 255);
+    text-align: center;    
 }
 
 .container {
@@ -17,14 +16,30 @@ h1 {
     margin: 10px auto;
 }
 
-.red {
-    background: linear-gradient(180deg, rgb(122, 74, 14), rgb(245, 62, 113), rgb(162, 27, 27));
-    box-shadow: 0 0 20px 0 rgba(83, 14, 14, 0.8);
+.cap {
+    width: 60px;
+    height: 25px;
 }
 
+.sleeve {
+    width: 110px;
+    height: 25px;
+    background-color: rgba(255, 255, 255, 0.5);    
+    border-left: 10px double rgba(0, 0, 0, 0.75);    
+}
+
+.cap, .sleeve {
+    display: inline-block;
+}
+
+.red {
+    background: linear-gradient(rgb(122, 74, 14), rgb(245, 62, 113), rgb(162, 27, 27));
+    box-shadow: 0 0 20px 0 rgba(83, 14, 14, 0.8);
+}
+  
 .green {
     background: linear-gradient(#55680D, #71F53E, #116C31);
-    box-shadow: 0 0 20px 0 3B7E20CC;
+    box-shadow: 0 0 20px 0 #3B7E20CC;
 }
 
 .blue {
@@ -32,18 +47,4 @@ h1 {
     box-shadow: 0 0 20px 0 hsl(223, 59%, 31%, 0.8);
 }
 
-.sleeve {
-    width: 110px;
-    height: 25px;
-    background-color: rgba(255, 255, 255, 0.5);    
-    border-left: 10px double rgba(0, 0, 0, 0.75%);    
-}
 
-.cap {
-    width: 60px;
-    height: 25px;
-}
-
-.cap, .sleeve {
-    display: inline-block;
-}
