Registration form complete

--- a/RegistrationForm/styles.css
+++ b/RegistrationForm/styles.css
@@ -16,10 +16,11 @@ h1, p {
 }
 
 form {
-    margin: 0 auto;
-    max-width: 500px;
     width: 60vw;
+    max-width: 500px;
     min-width: 300px;
+    margin: 0 auto;
+    padding-bottom: 2em;
 }
 
 fieldset {
@@ -58,5 +59,18 @@ input, textarea {
 input[type="submit"] {
     display: block;
     width: 60%;
-    margin: 0 auto;
+    margin: 1em auto 1em auto;
+    height: 2em;
+    font-size: 1.1rem;    
+    background-color: #3b3b4f;
+    border-color: white;
+    min-width: 300px;
+}
+
+input[type="file"] {
+    padding: 1px 2px;
+}
+
+a {
+    color: #dfdfe2;
 }
