--- a/SurveyForm/styles.css
+++ b/SurveyForm/styles.css
@@ -2,22 +2,22 @@
 
 html,
 body{
-  background-color: blue;
+  background-color: #1b1b32;
   text-align: center;
   font-family: 'Libre Baskerville', serif;
   min-width: 320px;
 }
-
   
 header{
   margin: 20px;
 }
+
 #title{
   font-size: 50px;
   font-weight: bold;
   color: white;
 }
-  
+
 #form-outer{
   background-color: rgb(250, 250, 250);
   margin: 0 auto;
@@ -125,6 +125,7 @@ input[type="checkbox"] {
     width: 100%;
   }
 }
+
 img{
   border-radius: 50%;
   width: 9%;
@@ -134,6 +135,7 @@ img{
   transition: width 2s, height 2s, transform 2s; 
   transition: width 2s, height 2s, transform 2s;
 }
+
 img:hover {
   transform: rotate(360deg); 
   transform: rotate(360deg);
