--- a/RothkoPainting/styles.css
+++ b/RothkoPainting/styles.css
@@ -6,6 +6,7 @@
     height: 600px;
     background-color: #4d0f00;
     overflow: hidden;
+    filter: blur(2px);
 }
 
 .frame {
@@ -33,6 +34,9 @@
     width: 91%;
     height: 28%;
     background-color: #b20403;
-    margin: auto;
-    
+    margin: auto;    
+}
+
+.one, .two {
+    filter: blur(1px);
 }
