--- a/NutritionLabel/styles.css
+++ b/NutritionLabel/styles.css
@@ -88,6 +88,10 @@
   .indent {
     margin-left: 1em;
   }
+
+  .double-indent {
+    margin-left: 2em;
+  }
   
   .daily-value p:not(.no-divider) {
     border-bottom: 1px solid #888989;
