--- a/QuizApp/styles.css
+++ b/QuizApp/styles.css
@@ -47,3 +47,18 @@ body {
     border-bottom: 4px solid #dfdfe2;
   }
   
+h3::before {
+  content: "Question #";
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
