added final touches to index and style sheet

--- a/QuizApp/styles.css
+++ b/QuizApp/styles.css
@@ -37,6 +37,17 @@ body {
     display: flex;
     justify-content: space-evenly;
   }
+
+  nav > ul > li {
+    color: #dfdfe2;
+    margin: 0 0.2rem;
+    padding: 0.2rem;
+    display: block;
+  }
+
+  nav > ul > li > a {
+    color: #dfdfe2;
+  }
   
   h1,
   h2 {
