--- a/QuizApp/styles.css
+++ b/QuizApp/styles.css
@@ -2,61 +2,77 @@
 
 
 body {
-    background: #f5f6f7;
-    color: #1b1b32;
-    font-family: Helvetica;
-    margin: 0;
-  }
+  background: #f5f6f7;
+  color: #1b1b32;
+  font-family: Helvetica;
+  margin: 0;
+}
   
-  header {
-    width: 100%;
-    height: 50px;
-    background-color: #1b1b32;
-    display: flex;
-  }
+header {
+  width: 100%;
+  height: 50px;
+  background-color: #1b1b32;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  top: 0;
+}
   
-  #logo {
-    width: max(10rem, 18vw);
-    background-color: #0a0a23;
-    aspect-ratio: 35 / 4;
-    padding: 0.4rem;
-  }
+#logo {
+  width: max(10rem, 18vw);
+  background-color: #0a0a23;
+  aspect-ratio: 35 / 4;
+  padding: 0.4rem;
+}
   
-  h1 {
-    color: #f1be32;
-    font-size: min(5vw, 1.2em);
-  }
-  
-  nav {
-    width: 50%;
-    max-width: 300px;
-    height: 50px;
-  }
-  
-  nav > ul {
-    display: flex;
-    justify-content: space-evenly;
-  }
+h1 {
+  color: #f1be32;
+  font-size: min(5vw, 1.2em);
+  text-align: center;
+}
 
-  nav > ul > li {
-    color: #dfdfe2;
-    margin: 0 0.2rem;
-    padding: 0.2rem;
-    display: block;
-  }
+main {
+  padding-top: 60px;
+}
 
-  nav > ul > li > a {
-    color: #dfdfe2;
-  }
-  
-  h1,
-  h2 {
-    font-family: Verdana, Tahoma;
-  }
-  
-  h2 {
-    border-bottom: 4px solid #dfdfe2;
-  }
+nav {
+  width: 50%;
+  max-width: 300px;
+  height: 50px;
+}
+
+nav > ul {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+nav > ul > li {
+  color: #dfdfe2;
+  margin: 0 0.2rem;
+  padding: 0.2rem;
+  display: block;
+}
+
+nav > ul > li:hover {
+  color: #1b1b32;
+  background-color: #dfdfe2;
+  cursor: pointer;
+}
+
+li > a {
+  color: inherit;
+  text-decoration: none;
+}
+
+h1,
+h2 {
+  font-family: Verdana, Tahoma;
+}
+
+h2 {
+  border-bottom: 4px solid #dfdfe2;
+}
   
 h3::before {
   content: "Question #";
