--- a/QuizApp/styles.css
+++ b/QuizApp/styles.css
@@ -36,6 +36,15 @@ main {
   padding-top: 60px;
 }
 
+section {
+  width: 80%;
+  margin-top: 0;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 10px;
+  max-width: 600px;
+}
+
 nav {
   width: 50%;
   max-width: 300px;
@@ -77,6 +86,31 @@ h2 {
 
 h2 {
   border-bottom: 4px solid #dfdfe2;
+  margin-top: 0;
+  padding-top: 60px;
+}
+
+.info {
+  padding: 10px 0 0 5px;
+}
+
+.formrow {
+  margin-top: 30px;
+  padding: 0px 15px;
+}
+
+input {
+  font-size: 16px;
+}
+
+.info input {
+  width: 50%;
+  text-align: left;
+}
+
+.info label {
+  width: 10%;
+  min-width: 55px;
 }
   
 h3::before {
