--- a/QuizApp/styles.css
+++ b/QuizApp/styles.css
@@ -103,6 +103,10 @@ input {
   font-size: 16px;
 }
 
+.info > input, .info > label {
+  display: inline-block;
+}
+
 .info input {
   width: 50%;
   text-align: left;
@@ -112,9 +116,33 @@ input {
   width: 10%;
   min-width: 55px;
 }
+
+.question-block {
+  text-align: left;
+  display: block;
+  width: 100%;
+  margin-top: 20px;
+  padding-top: 5px;
+}
+
+h3 {
+  margin-top: 5px;
+  padding-left: 15px;
+  font-size: 22px;
+}
   
 h3::before {
   content: "Question #";
+}
+
+.question {
+  border: none;
+  padding-bottom: 0;
+}
+
+.answers-list {
+  padding: 0;
+  list-style: none;
 }
 
 .sr-only {
