--- a/QuizApp/styles.css
+++ b/QuizApp/styles.css
@@ -1,5 +1,9 @@
 
-
+@media (prefers-reduced-motion: no-preference) {
+  * {
+    scroll-behavior: smooth;
+  }
+}
 
 body {
   background: #f5f6f7;
@@ -143,6 +147,31 @@ h3::before {
 .answers-list {
   padding: 0;
   list-style: none;
+}
+
+button {
+  display: block;
+  margin: 40px auto;
+  width: 40%;
+  padding: 15px;
+  font-size: 23px;
+  background: #d0d0d5;
+  border: 3px solid #3b3b4f;
+}
+
+footer {
+  background-color: #2a2a40;
+  display: flex;
+  justify-content: center;
+}
+
+footer, footer a {
+  color: #dfdfe2
+}
+
+address {
+  text-align: center;
+  padding: 16px;
 }
 
 .sr-only {
